# TelegramParserAPI

./: .gitignore  README.md  channels.csv  docker-compose.dev.yaml  docker-compose.yaml  mypy.ini  pyproject.toml  rabbitmq.conf  ruff.toml  workspace.toml
.github/workflows/: deploy.yml
api/: requirements.txt  run.py
api/app/: config.py  main.py
api/app/models/: __init__.py  scheduler_add_channel.py
api/app/routers/: parser.py  public.py  scheduler.py
api/app/services/: __init__.py  base.py  token.py
api/app/services/impl/: __init__.py  database.py  parser.py  scheduler.py  storage.py  telegram.py
bases/parser/api/: __init__.py  core.py  settings.py  utils.py
bases/parser/api/routers/: __init__.py  parser.py  public.py
bases/parser/migrator/: alembic.ini  core.py
bases/parser/migrator/migrations/: env.py
bases/parser/migrator/migrations/versions/: 14187dfc65ec_every_one_hour_parsing.py  3bc288e7abd5_add_task_claim_history.py  57bb93ae0b22_update_timezones.py  5a81eceb1bdf_add_file_name_to_media_model.py  5cd29f17000c_add_worker_account_usage_and_session_.py  63fcf8111eed_remove_useless_field_from_telegram_.py  949251ff383c_add_parsing_task_model.py  c5603e70cc81_fix_message_id_unique.py  d2c2fc33083a_add_more_stats.py  d47bd9ff611b_add_locked_until_and_reason_usage_.py  d9964358c36d_nullable_session_string.py  dbf203c6f610_add_telegram_client_models.py  e2f49e5f56a9_initialize_models.py  fd36ffa275e8_add_channel_message_statistic.py
bases/parser/scheduler_loop/: __init__.py  core.py
bases/parser/worker/: core.py  exceptions.py  settings.py  worker.py
components/parser/dto/: __init__.py  core.py
components/parser/logging/: __init__.py  core.py
components/parser/message_broker/: __init__.py  core.py  exceptions.py  settings.py
components/parser/opentele/: utils.py
components/parser/opentele/td/: account.py
components/parser/persistence/: __init__.py  core.py  settings.py
components/parser/persistence/models/: __init__.py  _base.py  channel.py  channel_message.py  channel_message_statistic.py  channel_statistic.py  media.py  parsing_task.py  task_claim_history.py  telegram_client.py  worker_account_usage.py
components/parser/scheduler/: __init__.py  core.py
components/parser/settings/: __init__.py  core.py
components/parser/storage/: __init__.py  core.py  exceptions.py  settings.py
components/parser/telegram/: __init__.py  client.py  core.py  exceptions.py  session_storage.py  settings.py
database/: requirements.txt  run.py
database/src/: config.py  database.py  models.py
development/: call_parser.py  convert_to_telethon.py
jaeger/: config.yml
parser/: requirements.txt  run.py
parser/src/: config.py  parser.py
parser/src/telegram/: __init__.py  custom_client.py  models.py  telegram.py
parser/telegram/opentele/: setup.py
parser/telegram/opentele/src/: api.py  debug.py  devices.py  exception.py  utils.py
parser/telegram/opentele/src/td/: account.py  auth.py  configs.py  mtp.py  storage.py  tdesktop.py
parser/telegram/opentele/src/tl/: configs.py  telethon.py
parser/telegram/opentele/tests/: tdata_test.py
projects/api/: Dockerfile  entrypoint.sh  pyproject.toml
projects/migrator/: Dockerfile  pyproject.toml
projects/scheduler/: Dockerfile  pyproject.toml
projects/worker/: Dockerfile  entrypoint.sh  pyproject.toml
scheduler/: requirements.txt  run.py
scheduler/src/: __init__.py  scheduler.py
scheduler/src/allocator/: __Init__.py  allocator.py  time_slot.py
shared_models/: Dockerfile  pyproject.toml
shared_models/shared_models/: channel.py  message.py
shared_models/shared_models/database/: errors.py  get_24h_statistics.py  get_channel.py  get_channel_by_link.py  get_channels_ids.py  get_media.py  get_messages.py  update_or_create_channel.py  update_or_create_message.py
shared_models/shared_models/parser/: errors.py  get_channel_info.py
shared_models/shared_models/scheduler/: add_channel.py
shared_models/shared_models/storage/: errors.py  get_logo.py  get_media.py  save_logo.py  save_media.py
storage/: requirements.txt  run.py
storage/src/: storage.py
test/: conftest.py
test/bases/parser/api/: test_core.py
test/bases/parser/scheduler_loop/: test_core.py
test/bases/parser/worker/: test_core.py
test/components/parser/dto/: test_core.py
test/components/parser/logging/: test_core.py
test/components/parser/message_broker/: test_core.py
test/components/parser/opentele/: test_core.py
test/components/parser/persistence/: conftest.py  test_channel.py  test_channel_message.py  test_channel_message_statistic.py  test_channel_statistic.py  test_core.py  test_media.py  test_parsing_task.py  test_telegram_client.py  test_worker_account_usage.py
test/components/parser/scheduler/: test_core.py
test/components/parser/settings/: test_core.py
test/components/parser/storage/: test_core.py
test/components/parser/telegram/: conftest.py  mock_client.py  test_core.py  test_session_storage.py
