[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["ycalk <alosev752@gmail.com>"]
package-mode = false
packages = [
    {include = "parser/api",from = "bases"},
    {include = "parser/persistence",from = "components"},
    {include = "parser/settings",from = "components"},
    {include = "parser/logging",from = "components"},
    {include = "parser/migrator",from = "bases"},
    {include = "parser/dto",from = "components"},
    {include = "parser/storage",from = "components"},
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {version = "^0.128.0", extras = ["standard"]}
pydantic-settings = "^2.12.0"
dishka = {extras = ["fastapi"], version = "^1.7.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
asyncmy = "^0.2.11"
cryptography = "^46.0.3"
aioboto3 = "^15.5.0"
filetype = "^1.2.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
aiosqlite = {version = ">=0.22.1,<0.23.0"}
types-aioboto3 = {extras = ["essential"], version = "^15.5.0"}

[tool.poetry.group.migrations.dependencies]
alembic = {version = ">=1.18.1,<2.0.0"}

[tool.poetry.scripts]
alembic = "parser.migrator:run"
test = "development.test:test"