[tool.poetry]
name = "api"
version = "0.1.0"

authors = ["ycalk <alosev752@gmail.com>"]
license = ""

packages = [
    {include = "parser/api",from = "../../bases"},
    {include = "parser/persistence",from = "../../components"},
    {include = "parser/logging",from = "../../components"},
    {include = "parser/settings",from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {version = "^0.128.0", extras = ["standard"]}
pydantic-settings = "^2.12.0"
dishka = {extras = ["fastapi"], version = "^1.7.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
asyncmy = "^0.2.11"
cryptography = "^46.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "parser.api:run"