[tool.poetry]
name = "migrator"
version = "0.1.0"

authors = ["ycalk <alosev752@gmail.com>"]
license = ""

packages = [
    {include = "parser/migrator",from = "../../bases"},
    {include = "parser/persistence",from = "../../components"},
    {include = "parser/logging",from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
asyncmy = "^0.2.11"
pydantic-settings = "^2.12.0"
dishka = "^1.7.2"
cryptography = "^46.0.3"
alembic = {version = ">=1.18.1,<2.0.0"}
structlog = "^25.5.0"
opentelemetry-api = "^1.39.1"
opentelemetry-sdk = "^1.39.1"
opentelemetry-exporter-otlp = "^1.39.1"
opentelemetry-instrumentation-sqlalchemy = "^0.60b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
alembic = "parser.migrator:run"