[tool.poetry]
name = "worker"
version = "0.1.0"

authors = ["ycalk <alosev752@gmail.com>"]
license = ""

packages = [
    {include = "parser/worker",from = "../../bases"},
    {include = "parser/logging",from = "../../components"},
    {include = "parser/storage",from = "../../components"},
    {include = "parser/dto",from = "../../components"},
    {include = "parser/persistence",from = "../../components"},
    {include = "parser/telegram",from = "../../components"},
    {include = "parser/scheduler",from = "../../components"},
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
asyncpg = "^0.30.0"
pydantic-settings = "^2.12.0"
dishka = "^1.7.2"
cryptography = "^46.0.5"
aioboto3 = "^15.5.0"
telethon = "^1.42.0"
python-socks = {extras = ["asyncio"], version = "^2.8.0"}
cryptg = "^0.5.2"
filetype = "^1.2.0"
structlog = "^25.5.0"
opentelemetry-api = "^1.39.1"
opentelemetry-sdk = "^1.39.1"
opentelemetry-exporter-otlp = "^1.39.1"
opentelemetry-instrumentation-sqlalchemy = "^0.60b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
worker = "parser.worker:run"
